--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -947,6 +947,8 @@ there is a $b'$ with $\chosen{j}{b'}$, and \item there is a quorum $q \in
 Q_{e(i)}$ such that $\acc{i}{a}{b}$ has been received from every $a \in q$.
 \end{itemize}
 
+\pagebreak
+
 \subsection{Liveness}
 
 In order to show that this algorithm does not get stuck it is sufficient to
